--- a/extension/popup.html
+++ b/extension/popup.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 20px;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #e17055 0%, #8b5a87 50%, #4a4a8a 100%);
             color: white;
         }
         
@@ -194,8 +194,21 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo">📊</div>
-        <h1>Data Donation Tool</h1>
+        <div class="logo">
+            <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <!-- Heart shape -->
+                <path d="M18 30c-1.5-1.5-12-7.5-12-15 0-3.5 2.5-6 6-6 2 0 4 1 6 3 2-2 4-3 6-3 3.5 0 6 2.5 6 6 0 7.5-10.5 13.5-12 15z" fill="rgba(255,255,255,0.9)"/>
+                <!-- Data bars inside heart -->
+                <rect x="14" y="16" width="2" height="8" fill="rgba(255,255,255,0.3)"/>
+                <rect x="17" y="18" width="2" height="6" fill="rgba(255,255,255,0.3)"/>
+                <rect x="20" y="14" width="2" height="10" fill="rgba(255,255,255,0.3)"/>
+                <!-- Small dots representing data points -->
+                <circle cx="15" cy="13" r="0.8" fill="rgba(255,255,255,0.6)"/>
+                <circle cx="18" cy="12" r="0.8" fill="rgba(255,255,255,0.6)"/>
+                <circle cx="21" cy="11" r="0.8" fill="rgba(255,255,255,0.6)"/>
+            </svg>
+        </div>
+        <h1>Data For Good</h1>
         <p class="subtitle">Help research by sharing anonymized social media interaction data</p>
         
         <div id="consentSection" class="consent-section">
@@ -204,7 +217,6 @@
                 By using this extension, you agree to donate anonymized data about your social media interactions. This includes:
                 <br>• Post engagement times (likes, shares, comments)
                 <br>• Content type interactions (text, image, video)
-                <br>• Scroll behavior and viewing duration
                 <br>• Platform usage patterns
                 <br><br>
                 All data is anonymized and used for research purposes only.
